make the filter settings thinner and fix expand/collapse state of position filter

--- a/src/assets/less/filter.less
+++ b/src/assets/less/filter.less
@@ -18,6 +18,27 @@
   background-image: -webkit-linear-gradient(-405deg,#282a30,#393f4f);
   background-image: linear-gradient(135deg,#282a30,#393f4f);
 
+  .form-control{
+    height:25px;
+  }
+  .btn{
+    padding-left:5px;
+    padding-right:5px;
+    padding-top: 1px;
+    padding-bottom: 2px;
+  }
+  .input-group-addon{
+    padding:0;
+    padding-left:5px;
+    padding-right:5px;
+    color:rgba(0,0,0,0.3);
+    background-color: white;
+    border-left: 0;
+    border-radius:0;
+    font-weight: 100;
+    text-transform: lowercase;
+    font-size: 12px;
+  }
   .panel-default {
     margin: 0;
     border-radius: 0;
@@ -67,7 +88,9 @@
   padding-bottom:0px !important;
   background-color: transparent !important;
   background-image: none !important;
-  border: 0px !important;
+  border: 0 !important;
+  margin-top:4px;
+  cursor:pointer;
 }
 
 #filter_actions{
@@ -80,7 +103,8 @@
   overflow-y: auto;
 
   .panel-body{
-    padding:7px !important;
+    padding:7px;
+    padding-top:0;
   }
 
   > .panel{
@@ -101,7 +125,13 @@
   }
 
   .glyphicon {
-    top: -5px;
     color: #26B4A8;
+    padding:0;
+    top: -4px;
+    color:rgba(255,255,255,0.25);
+    &:hover{
+      color:@tintColor;
+    }
   }
+
 }
